--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "live-collab-whiteboard",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/server.js",
   "scripts": {
+    "start": "node api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
